syntax = "proto3";

import "google/protobuf/descriptor.proto";  // for FieldOptions

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/proto";

message SemanticDescriptor {
    // The semantic name of the SemanticValue contained in this field.
    string type = 1;

    // The type of this field can be specified dynamically. This is the name of
    // the attribute to use to retrieve the SemanticValue class to be used for
    // parsing this field.
    string dynamic_type = 5;
    string description = 2;

    // A JSON encoded default. This should be the same type as the
    // field it describes.
    string default = 6;

    enum Labels {
        DEFAULT = 0;

        ADVANCED = 1;  // Field should be offered for modification by advanced users
        // only.
        HIDDEN = 2;    // Field should be hidden from UIs - typically for internally
        // generated and used fields.
    };

    repeated Labels label = 3;

    // A friendly name for this field - to be used in GUIs etc.
    string friendly_name = 4;
}


message SemanticMessageDescriptor {
    // Describe the purpose of this protobuf.
    string description = 1;
    string friendly_name = 3;
}

extend google.protobuf.FieldOptions {
    SemanticDescriptor sem_type = 51584972;
}

extend google.protobuf.MessageOptions {
    SemanticMessageDescriptor semantic = 51584971;
}

extend google.protobuf.EnumValueOptions {
    string description = 48651165;
    SemanticDescriptor.Labels label = 48651166;
}
